@@ -71,6 +71,9 @@ enum {
 	// position of the node
 	CGPoint position;
 	
+	// openGL real Z vertex
+	float vertexZ_;
+	
 	// parallax X factor
 	float parallaxRatioX;
 	
@@ -119,6 +122,15 @@ enum {
 
 /** The z order of the node relative to it's "brothers": children of the same parent */
 @property(readonly) int zOrder;
+/** The real openGL Z vertex.
+ Differences between openGL Z vertex and cocos2d Z order:
+   - OpenGL Z modifies the Z vertex, and not the Z order in the relation between parent-children
+   - OpenGL Z might require to set 2D projection
+   - cocos2d Z order works OK if all the nodes uses the same openGL Z vertex. eg: vertexZ = 0
+ @warning: Use it at your own risk since it might break the cocos2d parent-children z order
+ @since v0.8
+ */
+@property (readwrite) float vertexZ;
 /** The rotation (angle) of the node in degrees. 0 is the default rotation angle */
 @property(readwrite,assign) float rotation;
 /** The scale factor of the node. 1.0 is the default scale factor */
